--- a/FinalsurgeTestsProject.csproj
+++ b/FinalsurgeTestsProject.csproj
@@ -24,4 +24,8 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\Vitals\" />
+  </ItemGroup>
+
 </Project>
